{
  "version": 4,
  "terraform_version": "1.6.0",
  "serial": 32,
  "lineage": "a174f6cc-4408-20fc-dfd4-d5d9bf42d6a6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:415875722680:subnet/subnet-05091c18c72226d89",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "172.31.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-05091c18c72226d89",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "415875722680",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "Course": "From Zero to certified Professional",
              "CreatedBy": "Terraform",
              "Owner": "Anton Bor"
            },
            "vpc_id": "vpc-073ed566ec0aa3ffd"
          },
          "dependencies": [
            "data.aws_availability_zones.working"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:415875722680:subnet/subnet-0aef762f41acd9583",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "172.31.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-0aef762f41acd9583",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "415875722680",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "Course": "From Zero to certified Professional",
              "CreatedBy": "Terraform",
              "Owner": "Anton Bor"
            },
            "vpc_id": "vpc-073ed566ec0aa3ffd"
          },
          "dependencies": [
            "data.aws_availability_zones.working"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:415875722680:vpc/vpc-073ed566ec0aa3ffd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-01e6afb25804af863",
            "default_route_table_id": "rtb-062e729f8c4295ca4",
            "default_security_group_id": "sg-0039084a7f9d08888",
            "dhcp_options_id": "dopt-068395dd9fbab053e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-073ed566ec0aa3ffd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-062e729f8c4295ca4",
            "owner_id": "415875722680",
            "tags_all": {
              "Course": "From Zero to certified Professional",
              "CreatedBy": "Terraform",
              "Owner": "Anton Bor"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:415875722680:loadbalancer/app/WebServer-HighlyAvailable-ALB/c794d6997336d9b8",
            "arn_suffix": "app/WebServer-HighlyAvailable-ALB/c794d6997336d9b8",
            "desync_mitigation_mode": "defensive",
            "dns_name": "WebServer-HighlyAvailable-ALB-489147293.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:415875722680:loadbalancer/app/WebServer-HighlyAvailable-ALB/c794d6997336d9b8",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "WebServer-HighlyAvailable-ALB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-01e4ad29107c2f3f2"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05091c18c72226d89"
              },
              {
                "subnet_id": "subnet-0aef762f41acd9583"
              }
            ],
            "subnets": [
              "subnet-05091c18c72226d89",
              "subnet-0aef762f41acd9583"
            ],
            "tags_all": {
              "Course": "From Zero to certified Professional",
              "CreatedBy": "Terraform",
              "Owner": "Anton Bor"
            },
            "vpc_id": "vpc-073ed566ec0aa3ffd",
            "xff_header_processing_mode": "append",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "aws_default_subnet.default_az1",
            "aws_default_subnet.default_az2",
            "aws_default_vpc.default",
            "aws_security_group.web",
            "data.aws_availability_zones.working"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:415875722680:listener/app/WebServer-HighlyAvailable-ALB/c794d6997336d9b8/c4e6586f05d3f55c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:415875722680:targetgroup/WebServer-HighlyAvailable-TG/b163a5f26272dee0",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:415875722680:listener/app/WebServer-HighlyAvailable-ALB/c794d6997336d9b8/c4e6586f05d3f55c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:415875722680:loadbalancer/app/WebServer-HighlyAvailable-ALB/c794d6997336d9b8",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "Course": "From Zero to certified Professional",
              "CreatedBy": "Terraform",
              "Owner": "Anton Bor"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_subnet.default_az1",
            "aws_default_subnet.default_az2",
            "aws_default_vpc.default",
            "aws_lb.web",
            "aws_lb_target_group.web",
            "aws_security_group.web",
            "data.aws_availability_zones.working"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:415875722680:targetgroup/WebServer-HighlyAvailable-TG/b163a5f26272dee0",
            "arn_suffix": "targetgroup/WebServer-HighlyAvailable-TG/b163a5f26272dee0",
            "connection_termination": false,
            "deregistration_delay": "10",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:415875722680:targetgroup/WebServer-HighlyAvailable-TG/b163a5f26272dee0",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "WebServer-HighlyAvailable-TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Course": "From Zero to certified Professional",
              "CreatedBy": "Terraform",
              "Owner": "Anton Bor"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-073ed566ec0aa3ffd"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:415875722680:security-group/sg-01e4ad29107c2f3f2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01e4ad29107c2f3f2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Web Security Group",
            "name_prefix": "",
            "owner_id": "415875722680",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Web Security Group"
            },
            "tags_all": {
              "Course": "From Zero to certified Professional",
              "CreatedBy": "Terraform",
              "Name": "Web Security Group",
              "Owner": "Anton Bor"
            },
            "timeouts": null,
            "vpc_id": "vpc-073ed566ec0aa3ffd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}